Add background color

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="main-wrapper">
       <div class="content">
         <div class="row m-2 justify-content-md-center">
-          <div class="col-xxl-3 col-xl-4 col-sm-6">
+          <div class="col-xxl-3 col-xl-4 col-sm-6 chart-container">
             <div class="title">
               <span>Product Owned</span>
             </div>
@@ -64,7 +64,7 @@
             </div>
             <div class="chart" id="line-container-product"></div>
           </div>
-          <div class="col-xxl-3 col-xl-4 col-sm-6">
+          <div class="col-xxl-3 col-xl-4 col-sm-6 chart-container">
             <div class="title">
               <span>Segment</span>
             </div>
@@ -114,7 +114,7 @@
             </div>
             <div class="chart" id="line-container-segment"></div>
           </div>
-          <div class="col-xxl-3 col-xl-4 col-sm-6">
+          <div class="col-xxl-3 col-xl-4 col-sm-6 chart-container">
             <div class="title">
               <span>URL</span>
             </div>
@@ -164,7 +164,7 @@
             </div>
             <div class="chart" id="line-container-url"></div>
           </div>
-          <div class="col-xxl-3 col-xl-4 col-sm-6">
+          <div class="col-xxl-3 col-xl-4 col-sm-6 chart-container">
             <div class="title">
               <span>ORG</span>
             </div>
@@ -214,7 +214,7 @@
             </div>
             <div class="chart" id="line-container-org"></div>
           </div>
-          <div class="col-xxl-3 col-xl-4 col-sm-6">
+          <div class="col-xxl-3 col-xl-4 col-sm-6 chart-container">
             <div class="title">
               <span>Search</span>
             </div>
@@ -264,7 +264,7 @@
             </div>
             <div class="chart" id="line-container-search"></div>
           </div>
-          <div class="col-xxl-3 col-xl-4 col-sm-6">
+          <div class="col-xxl-3 col-xl-4 col-sm-6 chart-container">
             <div class="title">
               <span>Zipcode</span>
             </div>
